seedboxk8s/applications/whoami/IngressRoute.newcert.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-newcert
  namespace: whoami
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: "Host(`whoami-newcert.${testingClusterFqdn}`) || Host(`whoami-newcert.${productionClusterFqdn}`)"
      kind: Rule
      services:
        - name: whoami-service
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
