seedboxk8s/applications/whoami/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: whoami
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Whoami
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: mdi-web
    gethomepage.dev/href: https://whoami.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=whoami
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: whoami-service
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
