seedboxk8s/applications/whoami/IngressRouteTCP.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: whoami-ingresstcp-route
  namespace: whoami
spec:
  ingressClassName: traefik-localnet
  entryPoints:
    - whoami-http-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: whoami-service
          port: 80
